wso2is-km-deployment.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wso2is-km-deployment
spec:
  replicas: 1
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: wso2is-km
    spec:
      containers:
      - name: wso2apim-with-analytics-apim-worker
        image: gcr.io/research-n-development-209206/modusbox-wso2is-km:5.5.0
        livenessProbe:
          httpGet:
            path: /carbon
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 150
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /carbon
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 150
          periodSeconds: 10
        imagePullPolicy: Always
        ports:
        -
          containerPort: 9763
          protocol: "TCP"
        -
          containerPort: 9443
          protocol: "TCP"
      serviceAccountName: "wso2svc-account"
