wso2is-km-service.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: wso2is-km-service
spec:
  # label keys and values that must match in order to receive traffic for this service
  selector:
    deployment: wso2is-km
  ports:
    # ports that this service should serve on
    -
      name: servlet-http
      protocol: TCP
      port: 9763
    -
      name: servlet-https
      protocol: TCP
      port: 9443
